fix issue with vh on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@ body {
   flex: 1;
   margin: 0;
   max-width: 100%;
-  min-height: 100vh;
+  min-height: 100%;
   padding: 0;
   width: 100%;
 }
